<resources>
    <string name="app_name">Пошук вільних паркувальних місць</string>
    <string name="action_settings">Settings</string>
    <string name="aboute">About</string>
    <string name="Aboute">В цьому додатку вам надається можливість створювати точки на карті де, на вашу думку, буде зручно припаркуватись іншим користувачам та, звісно, самому користуватись мітками інших користувачів</string>
    <string name="nazad">До попереднього меню</string>
    <string name="kartinka">Kartinka</string>
    <string name="imagecar">ImageCar</string>
    <string name="notyellowcar">notYellowCar</string>
    <string name="title_activity_maps">Map</string>
    <string name="holla">Привіт, пропоную ознайомитись з вільними місцями для стоянки</string>
    <string name="call">Зателефонувати нам</string>
    <string name="title_activity_kuiv_map">Map</string>
    <string name="obuhov">Паркувальні місця в Обухові</string>
    <string name="kuivPark">Паркувальні місця в Києві</string>
    <string name="title_activity_kuiv">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="res">Логін / Реєстрація</string>
    <string name="todo2">TODO</string>

</resources>
