<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0D0D"
    android:orientation="vertical">

    <TextView
        android:id="@+id/aboute"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:text="@string/Aboute"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/abcenter"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/notyellowcar"
            app:srcCompat="@drawable/redcar" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/nazad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:text="@string/nazad"
            android:textColor="#020202"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-4dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>